--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.5",
+        "php": "^8.1",
         "kuiper/rpc": "^0.8",
         "kuiper/http-client": "^0.8"
     },
